; ModuleID = '/home/carl/AnghaBench/Cinder/src/cinder/app/android/extr_android_native_app_glue.c_android_app_set_activity_state.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/cinder/app/android/extr_android_native_app_glue.c_android_app_set_activity_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.android_app = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.android_app*, i64)* @android_app_set_activity_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @android_app_set_activity_state(%struct.android_app* %0, i64 %1) #0 {
  %3 = alloca %struct.android_app*, align 8
  %4 = alloca i64, align 8
  store %struct.android_app* %0, %struct.android_app** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.android_app*, %struct.android_app** %3, align 8
  %6 = getelementptr inbounds %struct.android_app, %struct.android_app* %5, i32 0, i32 1
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load %struct.android_app*, %struct.android_app** %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @android_app_write_cmd(%struct.android_app* %8, i64 %9)
  br label %11

11:                                               ; preds = %17, %2
  %12 = load %struct.android_app*, %struct.android_app** %3, align 8
  %13 = getelementptr inbounds %struct.android_app, %struct.android_app* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %11
  %18 = load %struct.android_app*, %struct.android_app** %3, align 8
  %19 = getelementptr inbounds %struct.android_app, %struct.android_app* %18, i32 0, i32 2
  %20 = load %struct.android_app*, %struct.android_app** %3, align 8
  %21 = getelementptr inbounds %struct.android_app, %struct.android_app* %20, i32 0, i32 1
  %22 = call i32 @pthread_cond_wait(i32* %19, i32* %21)
  br label %11

23:                                               ; preds = %11
  %24 = load %struct.android_app*, %struct.android_app** %3, align 8
  %25 = getelementptr inbounds %struct.android_app, %struct.android_app* %24, i32 0, i32 1
  %26 = call i32 @pthread_mutex_unlock(i32* %25)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @android_app_write_cmd(%struct.android_app*, i64) #1

declare dso_local i32 @pthread_cond_wait(i32*, i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
